# friskefrosk

./: CHANGELOG.md  README.md  friskefrosk.cabal
app/: Main.hs
src/Friskefrosk/: Friskefrosk.hs  Parse.hs
