cabal-version:      3.14
name:               friskefrosk
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Friskefrosk.Friskefrosk, Friskefrosk.Parse
    build-depends:    base ^>=4.21.0.0
                        , bytestring
                        , megaparsec
                        , text

    hs-source-dirs:   src/

    default-language: GHC2024

executable friskefrosk
    import:           warnings

    main-is:          Main.hs

    build-depends:
        base ^>=4.21.0.0,
        friskefrosk,
        haskeline,
        megaparsec,
        text

    hs-source-dirs:   app

    default-language: GHC2024

test-suite friskefrosk-test
    import:           warnings

    default-language: GHC2024

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
        base ^>=4.21.0.0,
        friskefrosk
